fixtures/frontend/milestone-2/invalid/nested-gate-predicate/main.aivi
signal flags:Signal Bool = True

signal filtered:Signal Bool =
    flags
     ?|> (
        .
         ?|> .
         T|> True
         F|> False
     )
